Fixed ContactForm component spacing styles.

--- a/src/components/page/ContactForm/contactForm.scss
+++ b/src/components/page/ContactForm/contactForm.scss
@@ -2,7 +2,8 @@
 @import '/src/styles/global/mixins';
 
 .ContactForm {
-	margin: 0 0 120px 0;
+	padding: 0 0 320px 0;
+  margin-bottom: -200px;
 	background-color: $color__background-light-blue;
 
 	&__heading {
